--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "type": "module",
-  "author": "",
+  "main": "./shortest-path-algo.js",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.57.0",
